src/test/ui/hrtb/hrtb-exists-forall-trait-contravariant.stderr
error: implementation of `Trait` is not general enough
  --> $DIR/hrtb-exists-forall-trait-contravariant.rs:34:5
   |
LL | trait Trait<T> {}
   | ----------------- trait `Trait` defined here
...
LL |     foo::<()>();
   |     ^^^^^^^^^ implementation of `Trait` is not general enough
   |
   = note: `()` must implement `Trait<for<'b> fn(&'b u32)>`
   = note: ...but `()` actually implements `Trait<fn(&'0 u32)>`, for some specific lifetime `'0`

error: aborting due to previous error

